package com.runaitec.credimacpato.entity.user;

import com.runaitec.credimacpato.entity.Voucher;
import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.OneToMany;
import jakarta.persistence.Table;
import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

import java.math.BigDecimal;
import java.util.ArrayList;
import java.util.List;

import static java.math.RoundingMode.HALF_UP;

@Entity
@Table(name = "socio")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
public abstract class Partner extends User {

    @Column(name = "saldo", precision = 10, scale = 2)
    private BigDecimal moneyBalance = BigDecimal.ZERO.setScale(2, HALF_UP);

    @OneToMany
    private List<Voucher> emittedVouchers = new ArrayList<>();

    @OneToMany
    private List<Voucher> stands = new ArrayList<>();

    @Override
    protected void onCreate() {
        super.onCreate();
        moneyBalance = moneyBalance == null
                ? BigDecimal.ZERO.setScale(2, HALF_UP)
                : moneyBalance.setScale(2, HALF_UP);
    }
}