@startuml
' Enums
enum Role {
  PARTNER,
  CUSTOMER,
  ASSOCIATION_PRESIDENT
}

enum UserState {
  ACTIVE
  CLOSED
  BLOCKED
}

enum DebtState {
  PENDING
  DENIED
  APPROVED
}

class Customer extends User {
  debts: List<Debt>
}

' Entities
class Partner extends User {
  account: Account
}

class User {
  id: Long
  username: String
  name: String
  lastname: String
  password: String
  role: Role
  createdAt: LocalDateTime
  userState: UserState
}

class Stand {
number
firstUtilizationDateTime
lastUtilizationDateTime
}

class Account {
  id: Long
  accountNumber: Long
  openingDate: LocalDateTime
  amount: BigDecimal
  accountState: AccountState
}

class Association {
  id: Long
  name: String
  address: String
  creationDateTime: LocalDateTime
  account: Account
}

class Debt {
  id: Long
  creationDateTime: LocalDateTime
  payments: List<Payment>
}

class Report {
  id: Long
  creationDate: LocalDateTime
}

class Payment {
  id: Long
  code: String
  date: LocalDateTime
  amount: BigDecimal
}

class Voucher {
number
totalAmount
voucherItems: List<VoucherItem>
igv
}

class VoucherItem {
quantity
desc
amount
}

' Relationships
Partner "1" -- "*" Account
Partner "1" -- "*" Debt : debts
Account "1" -- "*" Payment : originAccount
Association "1" -- "1" Account : account
Debt "1" -- "*" Payment : payments
Stand "*" -- "1" Partner : stands
Stand "1" -- "*" Debt : debts
Voucher "*" -- "1" Stand : vouchers
VoucherItem "*" -- "1" Voucher : items
Customer "1" -- "*" Debt : debts
Association "1" -- "*" Partner : partners
Customer "1" -- "*" Payment : payments
Voucher "*" -- "1" Customer : vouchers
Stand "*" -- "1" Association : stands
@enduml